--- a/Test6 con css.html
+++ b/Test6 con css.html
@@ -11,17 +11,25 @@
 </head>
 
 <body>
+    <div class="transi">
+        Texto Transitador
+    </div>
+
     <div class="arenero1">
         <p class="sombreadoGrande">
-        Flor
-    </p>
+            Flor
+        </p>
 
-      <div class="containerLoco">
-        <p class="sombreadoLoco">Martin</p>
-      </div>
-
+        <div class="containerLoco">
+            <p class="sombreadoLoco"> Martin</p>
+        </div>
+        <p class="transiSombraLoco">  Lolum 
+        </p>
     </div>
+
+
     <p>
+
         links a clarin en rojo / Links a clima en verde
         <br>
         <a href="www.clarin.com">Clarin</a>
@@ -82,6 +90,26 @@
     <h2>Subtítulo con selector general de hermanos</h2>
     <h5 class="sombreado">Titulo 5 Sombreado</h5>
     </p>
+
+    <p>Pasar por encima para ver el texto entero:</p>
+    <p>
+    <div class="sobrepasado">Esto es un div que tiene un texto con overflow mas largo de lo que se puede con hidden
+    </div>
+    <div class="sobrepasadoCortado">Sobrepasado cortado: Esto es un div que tiene un texto con overflow mas largo de lo
+        que se puede con hidden
+    </div>
+    </p>
+    <h1>Texto en columnas</h1>
+    <div class="encolumnar">
+        Uno de los responsables para que dicho resultado sea posible fue su entrenador Abel Balbo, quien asumió a
+        mediados de julio en el equipo de Santiago del Estero. En conferencia de prensa después del enfrentamiento
+        correspondiente a la fecha 11 de la Liga Profesional, el técnico dio a conocer los secretos de su estilo:
+        ”Trabajamos bastante en la fase defensiva. Estoy utilizando un método nuevo para ellos, no es fácil. Mi método
+        tiene 12 reglas defensivas, yo llegué sólo a 4 . No pude superar de cuatro porque son muchas y son difíciles. No
+        se puede hacer en una semana. De esas cuatro yo creo que estuvimos bastante bien pero estamos en un 50, 60 por
+        ciento de lo que realmente quiero”.
+
+    </div>
 </body>
 
 </HTML>
