--- a/curso-1/Test 1 Primer HTML.html
+++ b/curso-1/Test 1 Primer HTML.html
@@ -3,7 +3,7 @@ td">
 <HTML>
 
 <head>
-   <title>Pagina de Prueba Pablo</title>
+   <title>Pagina de Prueba  Pablo</title>
    <meta name="author" content="Pablo" />
    <meta charset="utf-8" />
 
@@ -11,7 +11,7 @@ td">
       h2, h3, h4, h5, h6 , textarea { color:blue; text-align:left ; background-color: aqua;}
       h1  { color:red; text-align:left }
       h1  { color:red; text-align:left }
-      p span { color:rgb(255, 187, 0) } 
+      p span { color:rgb(255, 0, 242) } 
    </style>
 
      
@@ -19,8 +19,8 @@ td">
 
 <BODY>
     <p>
-      Chau campeón.<br/>
-      Chau campe&oacute;
+      Chau campeón. <br/>
+      Chau campe&oacute;n
       10 es < que 20
     </p>
     <p>
@@ -73,7 +73,7 @@ td">
             <option value="b">Azul</option>
          </select>
       </p>
-      <textarea name="comentarios" cols="50" rows="4">Area de Comentarios</textarea>
+      <textarea name="comentarios" cols="50" rows="4">Area de Comentarios.</textarea>
       <!-- text, password, checkbox, radio, file, hidden, submit, reset.-->
 
    </form>
