--- a/curso-1/borrar2.html
+++ b/curso-1/borrar2.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
-<html lang="CHINO">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <header>
+        Inicio
+        Novelas
+        Peliculas
+        Contacto
+    </header>
+    <main>
+        <h1>Noticias Nacionales</h1>
+        <section>
+            <h2>Noticias del día</h2>
+            <article>
+                <h2>Noticia 1</h2>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi perferendis saepe rem laboriosam
+                    est consequuntur repellendus, vero magnam accusantium sapiente, voluptate ex veritatis fugit
+                    blanditiis, suscipit aliquid provident a ipsam!
+                </p>
+            </article>
+            <article>
+                <h2>Noticia 2</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore minus voluptatibus sapiente
+                    explicabo reiciendis molestiae. Blanditiis asperiores, eius expedita ea consequuntur esse suscipit
+                    quasi, doloremque omnis perferendis deserunt impedit eveniet?</p>
+            </article>
+
+        </section>
+    </main>
+    <footer>
+        Curso HTML 2022
+    </footer>
 </body>
+
 </html>
